--- a/package.json
+++ b/package.json
@@ -27,13 +27,16 @@
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "color": "^3.1.3",
+    "cors": "^2.8.5",
     "dotenv": "^8.5.1",
     "express": "^4.17.1",
+    "express-async-handler": "^1.1.4",
+    "jslint": "^0.12.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.7",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
-    "pdf-creator-node": "^2.2.2",
     "validator": "^13.6.0"
   },
   "devDependencies": {
