--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "client": "npm start --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
+  "proxy":"http://localhost:500",
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/shashiranjanraj/merndev.git"
@@ -43,4 +44,5 @@
     "concurrently": "^6.0.2",
     "nodemon": "^2.0.7"
   }
+
 }
